<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/blue_shade_2"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/idLL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/idTVItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/item_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/quantity"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.5"
                android:padding="4dp"
                android:text="@string/rate"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="3dp"
                android:padding="4dp"
                app:tint="@color/white"
                android:src="@drawable/ic_delete"
                android:id="@+id/idTVDelete"
                android:contentDescription="@string/delete_btn" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVHeading"
            android:layout_below="@+id/idLL1"
            android:layout_margin="3dp"
            android:layout_toStartOf="@+id/idTVTotalAmt"
            android:padding="4dp"
            android:text="@string/total_cost"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTotalAmt"
            android:layout_below="@+id/idLL1"
            android:layout_alignParentEnd="true"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:text="@string/amt"
            android:textColor="@color/white"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>

